// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`varchar.sql > line 12 1`] = `
[
  "INSERT INTO VARCHAR_TBL (f1) VALUES ('a')",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "cols": [
              {
                "ResTarget": {
                  "location": 25,
                  "name": "f1",
                },
              },
            ],
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "varchar_tbl",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "A_Const": {
                            "location": 37,
                            "sval": {
                              "sval": "a",
                            },
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`varchar.sql > line 33 1`] = `
[
  "SELECT c.*
   FROM VARCHAR_TBL c
   WHERE c.f1 <> 'a'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "c",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "varchar_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 47,
                "name": [
                  {
                    "String": {
                      "sval": "<>",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 50,
                    "sval": {
                      "sval": "a",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`varchar.sql > line 37 1`] = `
[
  "SELECT c.*
   FROM VARCHAR_TBL c
   WHERE c.f1 = 'a'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "c",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "varchar_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 47,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 49,
                    "sval": {
                      "sval": "a",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`varchar.sql > line 41 1`] = `
[
  "SELECT c.*
   FROM VARCHAR_TBL c
   WHERE c.f1 < 'a'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "c",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "varchar_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 47,
                "name": [
                  {
                    "String": {
                      "sval": "<",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 49,
                    "sval": {
                      "sval": "a",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`varchar.sql > line 45 1`] = `
[
  "SELECT c.*
   FROM VARCHAR_TBL c
   WHERE c.f1 <= 'a'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "c",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "varchar_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 47,
                "name": [
                  {
                    "String": {
                      "sval": "<=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 50,
                    "sval": {
                      "sval": "a",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`varchar.sql > line 49 1`] = `
[
  "SELECT c.*
   FROM VARCHAR_TBL c
   WHERE c.f1 > 'a'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "c",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "varchar_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 47,
                "name": [
                  {
                    "String": {
                      "sval": ">",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 49,
                    "sval": {
                      "sval": "a",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`varchar.sql > line 53 1`] = `
[
  "SELECT c.*
   FROM VARCHAR_TBL c
   WHERE c.f1 >= 'a'",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "c",
                  },
                  "inh": true,
                  "location": 19,
                  "relname": "varchar_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "c",
                          },
                        },
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "c",
                        },
                      },
                      {
                        "String": {
                          "sval": "f1",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
                "location": 47,
                "name": [
                  {
                    "String": {
                      "sval": ">=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "location": 50,
                    "sval": {
                      "sval": "a",
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`varchar.sql > line 57 1`] = `
[
  "DROP TABLE VARCHAR_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "varchar_tbl",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`varchar.sql > line 68 1`] = `
[
  "SELECT * FROM VARCHAR_TBL",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "varchar_tbl",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`varchar.sql > line 71 1`] = `
[
  "SELECT pg_input_is_valid('abcd  ', 'varchar(4)')",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "location": 25,
                            "sval": {
                              "sval": "abcd  ",
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "location": 35,
                            "sval": {
                              "sval": "varchar(4)",
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_input_is_valid",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
